--- a/Webionic.LinkList.csproj
+++ b/Webionic.LinkList.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Models\LinkGroupTreeViewPartRecord.cs" />
     <Compile Include="Models\LinkGroupTreeViewPart.cs" />
     <Compile Include="Models\ParentContentItem.cs" />
+    <Compile Include="ResourceManifest.cs" />
     <Compile Include="ViewModels\LinkGroupTreeViewPartEditViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +120,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\LinkGroupTreeViewPart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets.json" />
+    <None Include="Assets\Webionic.LinkList.less" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
